Update version.